--- a/docs/BackMatter/Recomendations.tex
+++ b/docs/BackMatter/Recomendations.tex
@@ -1,3 +1,51 @@
 \begin{recomendations}
-    Recomendaciones
+    A partir de los resultados, proponemos las siguientes 
+    recomendaciones para futuras investigaciones y aplicaciones:
+
+\begin{itemize}
+    \item \textbf{Evaluación rigurosa del LLM:} Si se emplea un LLM para 
+    la generación de etiquetas de sentimientos, es fundamental realizar 
+    una evaluación exhaustiva de su desempeño. Esto incluye verificar 
+    la coherencia y estabilidad de las inferencias, comparar los 
+    resultados con anotaciones humanas y analizar posibles sesgos o 
+    errores sistemáticos que puedan afectar la calidad de los datos.
+    
+    \item \textbf{Uso de técnicas clásicas de recuperación de información:} 
+    En lugar de utilizar un 
+    LLM, una alternativa viable es aplicar enfoques tradicionales de 
+    recuperación de información, como la búsqueda de patrones en 
+    bases de datos preexistentes de estados de la persona, el uso de 
+    diccionarios léxicos de sentimientos o modelos supervisados de 
+    clasificación de texto. 
+    Estos métodos pueden ofrecer mayor control y transparencia en 
+    la inferencia de sentimientos, reduciendo la variabilidad 
+    introducida por la generación de texto de los LLM.
+
+   
+
+    \item \textbf{Mejora en la inferencia del contexto de sentimientos:} 
+    Para capturar mejor el estado emocional de los usuarios, se recomienda 
+    el uso de fuentes de datos adicionales, como interacciones en redes 
+    sociales, encuestas directas o datos biométricos, que puedan 
+    proporcionar una inferencia más precisa y menos ruidosa de los 
+    sentimientos.
+    
+    \item \textbf{Análisis del impacto del contexto emocional en 
+    diferentes escenarios:} Se sugiere evaluar el impacto del contexto 
+    de sentimientos en distintos conjuntos de datos de movilidad, 
+    especialmente en entornos donde las decisiones de movimiento pueden 
+    estar más influenciadas por factores emocionales.
+    
+    \item \textbf{Validación en contextos reales:} Para evaluar la 
+    aplicabilidad práctica de los modelos, se recomienda realizar 
+    pruebas en escenarios reales con usuarios que proporcionen 
+    retroalimentación sobre la precisión de las predicciones y 
+    la relevancia del contexto emocional en su movilidad cotidiana.
+\end{itemize}
+
+En general, estos puntos pueden contribuir a mejorar la precisión de 
+los modelos de predicción de movilidad y a profundizar en la 
+comprensión del papel de los factores de sentimientos en los patrones 
+de movimiento de los usuarios.
+
 \end{recomendations}
