--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -496,3 +496,55 @@
    year={2022},
 
    month=nov, collection={SIGSPATIAL ’22} }
+
+@manual{zheng2011geolife,
+author = {Zheng, Yu and Fu, Hao and Xie, Xing and Ma, Wei-Ying and Li, Quannan},
+title = {Geolife GPS trajectory dataset - User Guide},
+year = {2011},
+month = {July},
+abstract = {This is a GPS trajectory dataset collected in (Microsoft Research Asia) GeoLife project by 182 users in a period of over three years (from April 2007 to August 2012). A GPS trajectory of this dataset is represented by a sequence of time-stamped points, each of which contains the information of latitude, longitude and altitude. This dataset contains 17,621 trajectories with a total distance of about 1.2 million kilometers and a total duration of 48,000+ hours. These trajectories were recorded by different GPS loggers and GPS-phones, and have a variety of sampling rates. 91 percent of the trajectories are logged in a dense representation, e.g. every 1~5 seconds or every 5~10 meters per point.
+
+This dataset recoded a broad range of users’ outdoor movements, including not only life routines like go home and go to work but also some entertainments and sports activities, such as shopping, sightseeing, dining, hiking, and cycling. This trajectory dataset can be used in many research fields, such as mobility pattern mining, user activity recognition, location-based social networks, location privacy, and location recommendation.
+
+
+Download Trajectories dataset},
+url = {https://www.microsoft.com/en-us/research/publication/geolife-gps-trajectory-dataset-user-guide/},
+edition = {Geolife GPS trajectories 1.1},
+}
+
+@article{Zheng2010GeoLife,
+  title     = {GeoLife: A Collaborative Social Networking Service among User, Location and Trajectory},
+  author    = {Zheng, Yu and Xie, Xing and Ma, Wei-Ying and others},
+  journal   = {IEEE Data(base) Engineering Bulletin},
+  volume    = {33},
+  number    = {2},
+  pages     = {32--39},
+  year      = {2010}
+}
+
+@inproceedings{Hong2021Clustering,
+  title     = {A Clustering-Based Framework for Individual Travel Behaviour Change Detection},
+  author    = {Hong, Yihong and Xin, Ying and Martin, Heinrich and Bucher, Dominik and Raubal, Martin},
+  booktitle = {11th International Conference on Geographic Information Science - Part II},
+  series    = {GIScience '21},
+  volume    = {208},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum für Informatik},
+  pages     = {4:1--4:15},
+  year      = {2021},
+  doi       = {10.4230/LIPIcs.GIScience.2021.II.4},
+  url       = {http://dx.doi.org/10.4230/LIPIcs.GIScience.2021.II.4}
+}
+
+@manual{gemini_api_docs,
+  title        = {Documentación de la API de Gemini},
+  author       = {{Google AI for Developers}},
+  year         = {2024},
+  url          = {https://ai.google.dev/gemini-api/docs},
+}
+
+@misc{geocode_maps_co,
+  author       = {{Geocode Maps}},
+  title        = {Geocoding API},
+  year         = {2025},
+  url          = {https://geocode.maps.co},
+}
