--- a/docs/FrontMatter/Abstract.tex
+++ b/docs/FrontMatter/Abstract.tex
@@ -11,7 +11,7 @@
 	En este trabajo se propone un modelo que busca predecir la 
 	siguiente ubicación a partir de la combinación del contexto 
 	espacio-temporal con variables de sentimientos, en pos de mejorar 
-	la precisión de la predicción. Para ello, se propone diseñar un 
+	la precisión de la predicción. Para ello, se tiene como objetivo diseñar un 
 	modelo de aprendizaje profundo que permita extraer las 
 	dependencias complejas entre variables y determinar cómo los 
 	estados de un individuo afectan la elección de su siguiente ubicación.\\
