--- a/docs/FrontMatter/SupervisorOpinion.tex
+++ b/docs/FrontMatter/SupervisorOpinion.tex
@@ -1,3 +1,40 @@
 \begin{opinion}
-    Opiniones de los tutores
+    El presente trabajo de diploma aborda un problema relevante 
+    en el ámbito de la movilidad humana, combinando técnicas de 
+    aprendizaje profundo con el análisis de sentimientos para la 
+    predicción de la siguiente ubicación de un individuo. 
+    A lo largo del desarrollo de la investigación, el autor ha 
+    demostrado una gran capacidad de análisis y síntesis, logrando 
+    integrar conceptos complejos de modelado de secuencias, 
+    procesamiento de datos espaciales y técnicas de inteligencia artificial.
+
+Uno de los mayores aciertos de la investigación radica en la exploración 
+del contexto basado en sentimientos como un factor que influye en 
+la predicción de movilidad, lo cual constituye un enfoque innovador en
+el campo. Si bien los resultados experimentales 
+no evidenciaron una mejora estadísticamente significativa con la 
+incorporación de esta variable, el enfoque abre nuevas líneas de 
+investigación en la intersección entre el comportamiento humano y 
+la inteligencia artificial aplicada a la movilidad.
+
+El autor ha mostrado capacidad para el desarrollo experimental, 
+la implementación de modelos avanzados y el análisis crítico de los 
+resultados. Asimismo, la organización del documento y la 
+claridad expositiva hacen que la lectura sea fluida y comprensible. 
+Se reconoce el esfuerzo en la recopilación de datos, la validación 
+de hipótesis y la aplicación de metodologías rigurosas.
+
+En conclusión, se considera un buen trabajo de investigación, tanto en su planteamiento 
+teórico como en su implementación experimental. Representa una contribución 
+al campo de la predicción de movilidad y establece nuevas bases 
+para futuras investigaciones que incorporen variables contextuales en modelos 
+de aprendizaje profundo. Por todo lo mencionado, se recomienda entonces una buena calificación.\\
+
+\makebox[5cm]{\hrulefill} 
+
+Lic. Ernesto Alfonso Hern\'andez
+
+Cotutor
+
+
 \end{opinion}
