--- a/docs/FrontMatter/Thanks.tex
+++ b/docs/FrontMatter/Thanks.tex
@@ -1,3 +1,26 @@
 \begin{acknowledgements}
-    Agradecimientos
+    Agradezco a mi tutora, Aymée, por sus correcciones y sugerencias, 
+    y a mi cotutor, Ernesto, por sus ideas y guía durante el desarrollo 
+    de este trabajo. También agradezco a mi fiel lectora, la 
+    periodista Claudia, por sus comentarios y sugerencias.
+
+    A mis profesores, por su dedicación, sus exigencias y enseñanzas,
+     que no solo han sido fundamentales en mi formación académica, 
+     sino que también han inspirado mi crecimiento personal y 
+     profesional. 
+
+Extiendo mi gratitud a mi familia por su apoyo incondicional, en 
+especial a mi tía Liset, a mi mamá y a mi abuela, por su paciencia y 
+comprensión. A mis amigos de la universidad, desde el primer año, 
+en especial a Emmanuel, el Viti y Rubén, hasta el último año, a 
+Roger Moreno, Marquito Puente 100, Kevin C122 y Juana Carla, 
+por los momentos compartidos.
+
+A mi compañera de estudios, Claudia, por transitar juntos este camino 
+de superación y aprendizaje. 
+
+Finalmente, agradezco a todos aquellos que 
+no se mencionan, pero que de alguna manera han contribuido a que esta 
+tesis sea posible.
+
 \end{acknowledgements}
