--- a/docs/MainMatter/Introduction.tex
+++ b/docs/MainMatter/Introduction.tex
@@ -8,10 +8,14 @@ ciudades. Para alcanzar los objetivos de desarrollo de las
 Naciones Unidas (\cite{Griggs2013}), los cambios en el comportamiento de 
 la movilidad y los nuevos conceptos para promover estos, 
 desempeñarán un papel fundamental
- (\cite{Martin2021}). En la salud p\'ublica, la pandemia de la COVID-19 es otra prueba
+ (\cite{Martin2021}). 
+ 
+En la salud p\'ublica, la pandemia de la COVID-19 es otra prueba
 de la necesidad de conocer esto a fondo, puesto
 que la movilidad es un factor determinante en la propagación
-de enfermedades infecciosas  (\cite{Kraemer2020}). Definiciones recientes como
+de enfermedades infecciosas  (\cite{Kraemer2020}). 
+
+Definiciones recientes como
 Movilidad como
 Servicio (MaaS) (\cite{Reck2022}), carga inteligente (\cite{Xu2018}) y 
 viaje compartido (\cite{Huang2019}), dependen de la capacidad de ofrecer 
@@ -26,7 +30,7 @@ La predicción de la siguiente ubicación de un individuo, a partir
 de su información histórica de movilidad, es un problema que ha cobrado 
 gran relevancia en la última década. El auge de los modelos de 
 aprendizaje profundo (\cite{luca2021survey}) ha impulsado el interés de 
-los investigadores en abordar este problema con métodos basados 
+los investigadores en abordar esta cuesti\'on con métodos basados 
 en el aprendizaje.  Al formularse como un problema de predicción 
 de secuencias, similar a tareas en procesamiento del lenguaje 
 natural y de audio, se aplican modelos exitosos en estos campos.  
@@ -54,7 +58,9 @@ La movilidad humana presenta características únicas, como
 dependencias espacio-temporales complejas (\cite{feng2018deepmove,li2020hierarchical}) y la 
 estocasticidad de las visitas a ubicaciones (\cite{Song2010}), que 
 dificultan la aplicación directa de modelos de aprendizaje de 
-secuencias. Predecir la siguiente ubicación a partir del 
+secuencias. 
+
+Predecir la siguiente ubicación a partir del 
 historial de visitas es un desafío. Un modelo preciso debe 
 considerar el contexto que influye en la elección de ubicaciones.  
 Estudios de comportamiento de viaje sugieren que la selección de 
@@ -62,7 +68,7 @@ ubicaciones se correlaciona con aspectos como la disponibilidad
 de modos de transporte (\cite{Hong_2022}) y el día de la semana (\cite{Dharmowijoyo2016}). 
 ¿Pero qu\'e otros factores influir\'ian en esto? ¿Ser\'ia posible
 que los sentimientos o estados de un individuo afecten la elección
-de su siguiente ubicación? Por ejemplo, si un individuo
+de su siguiente ubicación? Por ejemplo, si una persona
 está de mal humor, puede ser que vaya a un lugar
 de entretenimiento, como un cine o un bar; mientras que si
 se encuentra en un estado de enfermedad es probable que
@@ -85,7 +91,7 @@ precisión de la predicción?
 
 Desarrollar un modelo de aprendizaje profundo para la predicción de la siguiente ubicación que 
 incorpore la información de sentimiento o estado del individuo, 
-incluyendo el historial de ubicaciones, y datos 
+incluyendo el historial de ubicaciones y datos 
 temporales.
 
 \subsection{Objetivos Específicos}
@@ -107,6 +113,9 @@ Capítulo 1 se
 realiza un estudio sobre el marco teórico conceptual del problema. 
 El Capítulo 2 aborda tanto la modelación como la metodolog\'ia utilizada. 
 En el Capítulo 3
-se discuten sobre la implementación del modelo, as\'i como de su 
-evaluaci\'on mediante la experimentaci\'on. Finalmente se presentan las Conclusiones, donde se resumen los aspectos 
-fundamentales y se analiza el cumplimiento de los objetivos propuestos; y las Recomendaciones donde se formulan los trabajos futuros.\\
+se discute sobre la implementación del modelo, as\'i como de su 
+evaluaci\'on mediante la experimentaci\'on. Finalmente se presentan las Conclusiones, 
+donde se resumen los aspectos 
+fundamentales y se analiza el cumplimiento de los objetivos 
+propuestos; y las Recomendaciones donde se presenta una relaci\'on
+de trabajos futuros vinculados a la investigación.\\
