--- a/docs/Thesis.tex
+++ b/docs/Thesis.tex
@@ -14,6 +14,19 @@
 \usepackage{xcolor}
 \usepackage{multicol}
 \usepackage{graphicx}
+\usepackage{multirow}
+\usepackage{tikz}
+
+
+\usetikzlibrary{positioning, shapes.geometric, arrows}
+\usetikzlibrary{fit}
+\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=2cm, minimum height=1cm,text centered, draw=black, fill=red!30]
+\tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=orange!30]
+\tikzstyle{arrow} = [thick,->,>=stealth]
+\tikzstyle{doublearrow} = [thick,<->,>=stealth]
+\tikzstyle{plus} = [rectangle, minimum width=1cm, minimum height=1cm, text centered, draw=white, fill=white!30]
+\tikzstyle{squares} = [rectangle, minimum width=1cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
+%\usepackage{ulem}
 \floatstyle{plaintop}
 \restylefloat{table}
 \addbibresource{Bibliography.bib}
@@ -54,7 +67,7 @@
 \advisor{\\\vspace{0.25cm}Dra. Aymée de los Ángeles Marrero Severo\\\vspace{0.2cm}Lic. Ernesto Alfonso Hernández}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
-\date{Enero 2025\\\vspace{0.25cm}\href{https://github.com/YoanRene/My-Thesis}{github.com/YoanRene/My-Thesis}}
+\date{Febrero 2025\\\vspace{0.25cm}\href{https://github.com/YoanRene/My-Thesis}{github.com/YoanRene/My-Thesis}}
 \logo{Graphics/uhlogo}
 \makenomenclature
 
